[package]
name = "kitchensink-runtime"
version = "3.0.0-dev"
authors.workspace = true
description = "Substrate node kitchensink runtime."
edition.workspace = true
build = "build.rs"
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
codec = { features = ["derive", "max-encoded-len"], workspace = true }
scale-info = { features = ["derive", "serde"], workspace = true }
sp-debug-derive = { workspace = true, features = ["force-debug"] }
static_assertions = { workspace = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

# Core Substrate dependencies
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-executive = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false }
sp-weights = { workspace = true, default-features = false }
sp-storage = { workspace = true, default-features = false }
sp-trie = { workspace = true, default-features = false }
sp-state-machine = { workspace = true, default-features = false }
sp-externalities = { workspace = true, default-features = false }
sp-timestamp = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }

# Pallet dependencies
pallet-balances = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }

# shared code between runtime and node
node-primitives = { path = "../primitives", default-features = false }

[build-dependencies]
substrate-wasm-builder = { workspace = true }
substrate-build-script-utils = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-api/std",
    "sp-inherents/std",
    "sp-version/std",
    "sp-weights/std",
    "sp-storage/std",
    "sp-trie/std",
    "sp-state-machine/std",
    "sp-externalities/std",
    "sp-timestamp/std",
    "sp-transaction-pool/std",
    "sp-block-builder/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
    "node-primitives/std",
    "scale-info/std",
    "sp-debug-derive/std",
    "getrandom"
]

runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks"
]

try-runtime = [
    "frame-executive/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-timestamp/try-runtime"
]