[package]
name = "pallet-revive-mock-network"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A mock network for testing pallet-revive."

[lints]
workspace = true

[dependencies]
codec = { features = ["derive", "max-encoded-len"], workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-message-queue = { workspace = true, default-features = true }
pallet-revive = { workspace = true, default-features = true }
pallet-revive-uapi = { workspace = true }
pallet-timestamp = { workspace = true, default-features = true }
scale-info = { features = ["derive"], workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-tracing = { workspace = true, default-features = true }


[dev-dependencies]
pallet-revive-fixtures = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-revive-fixtures/std",
	"pallet-revive/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-revive/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",

]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-revive/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime",
]
